--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="hello_world">Hello world!</string>
 
     <string name="action_settings">Settings</string>
+    <string name="test">Test</string>
+    <string name="tab_setup">SETUP</string>
+    <string name="tab_apps">APPS</string>
+    <string name="tab_history">HISTORY</string>
+    <string name="apps_tip">This is tip</string>
 </resources>
