--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,14 +3,23 @@
     <string name="show_name">PC Notifications</string>
     <string name="service_name">PC Notifications</string>
     <string name="service_description">Enable this service to send notifications to your PC.</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">PC Notifications</string>
 
     <string name="hello_world">Hello world!</string>
 
-    <string name="action_settings">Settings</string>
-    <string name="test">Test</string>
+    <string name="open_system_settings">Open Settings</string>
+    <string name="button_test">Test</string>
     <string name="tab_setup">SETUP</string>
     <string name="tab_apps">APPS</string>
     <string name="tab_history">HISTORY</string>
-    <string name="apps_tip">This is tip</string>
+    <string name="apps_tip">This is a tip</string>
+
+    <string name="text_setup_code_title">1. Code Setting</string>
+    <string name="text_setup_code_description">Setting code to identify who you are.</string>
+    <string name="text_setup_access_title">2. Notification Access</string>
+    <string name="text_setup_access_description">Enable </string>
+    <string name="text_setup_pc_title">3. PC Client</string>
+    <string name="text_setup_pc_description">Install browser extension on pc.\n\nhttp://somewhere/</string>
+    <string name="text_setup_test_title">4. Test</string>
+    <string name="text_setup_test_description">Press the button below to create a test notification.</string>
 </resources>
